Hrefs to two different GH Repos

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,6 +6,7 @@ html {
 body {
     background-color: #333;
     display: flex;
+    flex: wrap;
     justify-content: center;
     align-items: center;
     height: 100%;
@@ -13,9 +14,42 @@ body {
     overflow: hidden;
 }
 
+#wrapper {
+    border: 2px solid whitesmoke;
+    border-radius: 8px;
+    padding: 25px;
+    -webkit-box-shadow: 10px 10px 100px #ccc;
+    -moz-box-shadow: 10px 10px 100px #ccc;
+    box-shadow: 10px 10px 100px #ccc;
+}
+
 h1 {
     color: whitesmoke;
-    display: inline;
     font-family: 'Roboto', sans-serif;
     font-size: 50px;
+}
+
+ul {
+    display: flex;
+    justify-content: space-around;
+    list-style-type: none;
+    padding: 0px;
+}
+
+li {
+    border: 2px solid whitesmoke;
+    border-radius: 8px;
+    padding: 15px;
+    text-decoration: none;
+}
+
+li:hover {
+    background-color: rgba(100,100,100,0.5);
+}
+
+a {
+    text-decoration: none;
+    color: whitesmoke;
+    font-family: 'Roboto', sans-serif;
+    font-size: 25px;
 }
