--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,59 +1,104 @@
+:root {
+  font-family: sans-serif;
+  font-size: 16px;
+}
+
 html {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
 }
 
 body {
-    background-color: #333;
-    display: flex;
-    flex: wrap;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-    background: #282828 url('../../NotNotCurious.png');
-    background-repeat: no-repeat;
-    background-position: center; 
-    background-size: contain;
+  background-color: #2a2929;
+  display: flex;
+  flex: wrap;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
 }
 
-/* #wrapper {
-    border: 2px solid whitesmoke;
-    border-radius: 8px;
-    padding: 25px;
-    -webkit-box-shadow: 10px 10px 100px #ccc;
-    -moz-box-shadow: 10px 10px 100px #ccc;
-    box-shadow: 10px 10px 100px #ccc;
+#wrapper {
+  width: 75%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-h1 {
-    color: whitesmoke;
-    font-family: 'Roboto', sans-serif;
-    font-size: 50px;
+#wrapper img {
+  width: 100%;
+}
+
+#logo {
+  max-width: 350px;
+}
+
+code {
+  color: #cecece;
+  font-size: 1.5rem;
+  margin: 1.5rem 0 2.5rem;
+  text-align: center;
+}
+
+.contact {
+  color: #cecece;
 }
 
 ul {
-    display: flex;
-    justify-content: space-around;
-    list-style-type: none;
-    padding: 0px;
+  width: 100%;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 li {
-    border: 2px solid whitesmoke;
-    border-radius: 8px;
-    padding: 15px;
-    text-decoration: none;
+  margin: 1rem;
+  cursor: pointer;
+  min-width: 85px;
 }
 
-li:hover {
-    background-color: rgba(100,100,100,0.5);
+li a {
+  text-decoration: none;
+  fill: #5d5d5d;
+  color: rgb(150, 150, 150);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: all 0.2s ease-in-out;
 }
 
-a {
-    text-decoration: none;
-    color: whitesmoke;
-    font-family: 'Roboto', sans-serif;
-    font-size: 25px;
-} */
+li:hover a,
+a:focus {
+  color: #cecece;
+  fill: #cecece;
+}
+
+li span {
+  padding-top: 0.8rem;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+li a svg {
+  width: 64px;
+  height: 64px;
+}
+
+@media (max-width: 450px) {
+  :root {
+    font-size: 14px;
+  }
+  code {
+    font-size: 1.3rem;
+  }
+
+  li a svg {
+    width: 48px;
+    height: 48px;
+  }
+}
